--- a/src/app/modules/template-input/components/template-overlay.component.scss
+++ b/src/app/modules/template-input/components/template-overlay.component.scss
@@ -16,7 +16,7 @@
         border-width: 1px 0;
         flex: 1;
         display: flex;
-
+        min-height: 0;
     }
 
     .footer {
